Decided that the cached vector fields should go into this directory. We can share them as well.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ Cy
 Cz
 dynamicCode
 !constant/transportProperties
+*.pickle
 
 # Created by https://www.gitignore.io/api/openfoam
 # Edit at https://www.gitignore.io/?templates=openfoam
